pick 05a5959e8 Replace some getNestingKind usages with xprocessing implementation.
see: https://github.com/google/dagger/commit/05a5959e85e2b
date: Jan 5 2022